[FEATURE] telegram bot and pdf fetures
